feat(TG-3): adapt code to improve performance tests and enable performance tests